# marxist-science.ru

./: .gitignore  Cargo.toml  README.md  Rocket.toml  marxist-science.asd  package.lisp
db/: db.sql
js/: bun.lockb  bundle.sh  editor-setup.js  image.js  inline-tool-bold.ts  inline-tool-italic.ts  package.json  types.ts
pub/css/: markdown.styles.css  styles.scss
pub/err/: 404.html  500.html
pub/js/: interactive.js  menu-toggle.js  upload.js
pub/old/css/: styles.css  styles.scss
src/: auth.rs  db.sql  errors.rs  main.rs  marxist-science.lisp  mime.lisp  page-templates.lisp  pages.lisp  util.lisp
src/api/: archive.rs  article.rs  dashboard.rs  mod.rs  rubrics.rs  upload.rs
src/models/: article.rs  file.rs  mod.rs  rubrics.rs
static/css/: image-block.css.map  image-block.scss  styles.css.map  styles.scss
templates/: base.html.tera  htmx.html.tera  index.html.tera  login.html.tera  macros.html.tera
templates/archive/: index.html.tera
templates/articles/: edit.html.tera  index.html.tera  macros.html.tera  rubrics-of-article.html.tera  view.html.tera
templates/dashboard/: archive.html.tera  articles.html.tera  index.html.tera  rubrics.html.tera
templates/htmx/archive/: entry-files.html.tera  entry-info.html.tera  entry.html.tera  file-picker.html.tera
templates/htmx/articles/: entry.html.tera
templates/htmx/rubrics/: list-for-picker.html.tera  macros.html.tera  rubric.html.tera
templates/rubrics/: index.html.tera
