[package]
name = "marxist-science"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "=0.7.0"
hex = "=0.4.3"
thiserror = "1.0"
futures = "0.3"
dotenvy = "0.15.7"
argon2 = "0.5.1"
rand = { version = "0.8.5", features = ["getrandom"] }

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["secrets", "json"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = [ "tera" ]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = [ "deadpool_postgres" ]
